--- a/job-portal/css/style.css
+++ b/job-portal/css/style.css
@@ -1,5 +1,202 @@
-body{
+* {
   margin: 0;
   padding: 0;
-  background-image: url('../images/bg.jpg');
+}
+
+#navbar{
+  display: flex;
+  height: 75px;
+  align-items: center;
+  position: sticky;
+  top: 0px;
+}
+
+#navbar::before{
+  content: "";
+  background-color: #262626;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: 0.7;
+}
+
+#logo{
+  margin: 0px 80px;
+}
+
+#logo img {
+  height: 60px;
+  margin: 0 40px;
+}
+
+#navbar > ul{
+  /* margin: auto; */
+  display: flex;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+#navbar > ul > li{
+  list-style: none;
+  font-size: 1.3rem;
+  
+}
+
+#navbar > ul > li > a{
+  text-decoration: none;
+  display: block;
+  padding: 5px 20px;
+  color: white;
+}
+
+
+#navbar > ul > li > a:hover{
+  background-color: white;
+  color: black;
+}
+
+
+/* Section */
+#home{
+  display: flex;
+  flex-direction: column;
+  /* padding: 3px 200px; */
+  height: 300px;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  text-align: center;
+  font-size: 1.5rem;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+#home::before{
+  content: "";
+  position: absolute;
+  background: url('../images/bg1.jpg') no-repeat center center/cover;
+  height: 400px;
+  width: 100%;
+  z-index: -1;
+  opacity: 0.9;
+  top: 0px;
+  left: 0px;
+}
+
+#home h1{
+  color: white;
+  text-align: center;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+
+.head-primary{
+  font-size: 3rem;
+  padding: 12px;
+}
+
+.head-secondary{
+  font-size: 2.8rem;
+}
+
+.btn{
+  padding: 8px 20px;
+    margin: 20px;
+    border-radius: 5px;
+    background: black;
+    color: white;
+    font-size: 1.1rem;
+    font-weight: 600;
+    font-family: 'Source Sans Pro', sans-serif;
+    border: 2px solid #fff;
+    opacity: 0.8;
+    cursor: pointer;
+}
+#jobs-container{
+  margin: 40px 0;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+#jobs-container h1{
+ text-align: center;
+}
+
+#jobs{
+  display: flex;
+  /* justify-content: center; */
+  border: 1px solid black;
+  margin: 15px 90px;
+  padding: 20px 0px;
+  border-radius: 5px;
+}
+
+#jobs img {
+  flex:0.35;
+  height: 120px;
+  /* width: 200px; */
+  margin: 0 50px 0 10px;
+  border-radius: 50px;
+  
+}
+
+.job-box p{
+  font-size: 1.3rem;
+}
+
+#our-work{
+  position: relative;
+}
+
+#our-work::before{
+  content: "";
+  position: absolute ;
+  background: url('../images/bg5.jpg') no-repeat center center/cover;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.5;
+}
+
+#our-work h1{
+  text-align: center;
+}
+
+#projects{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.project-item{
+  padding: 30px;
+}
+
+#projects img{
+  height: 150px;
+}
+
+#contact{
+  text-align: center;
+}
+
+#contact-box {
+  /* justify-items: center;
+  align-items: center;
+
+   */
+}
+#contact-box input,
+#contact-box textarea{
+  padding: 12px;
+}
+
+footer{
+  background-color: black;
+  color: white;
+  text-align: center;
+  font-family: 'Source Sans Pro', sans-serif;
+  padding: 10px 10px;
+
 }
