--- a/job-portal/css/style.css
+++ b/job-portal/css/style.css
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0;
 }
+html{
+  scroll-behavior: smooth;  
+}
 
 #navbar{
   display: flex;
@@ -132,7 +135,7 @@
  text-align: center;
 }
 
-#jobs{
+.jobs{
   display: flex;
   /* justify-content: center; */
   border: 2px solid rgb(179, 174, 174);
@@ -142,7 +145,7 @@
   border-radius: 5px;
 }
 
-#jobs img {
+.jobs img {
   height: 120px;
   width: 170px;
   margin: 0 50px 0 10px;
@@ -156,6 +159,7 @@
 
 #our-work{
   position: relative;
+  z-index: -1;
 }
 
 #our-work::before{
@@ -164,7 +168,6 @@
   background: url('../images/bg5.jpg') no-repeat center center/cover;
   width: 100%;
   height: 100%;
-  z-index: -1;
   opacity: 0.5;
 }
 
@@ -182,7 +185,7 @@
 
 .project-item{
   padding: 15px;
-  z-index: -1;
+  z-index: 1;
 }
 
 #projects img{
